# drf-registration-login

./: README.md  pyproject.toml
app/: serializers.py  urls.py
app/migrations/: 0001_initial.py
otp_auth/: asgi.py  settings.py  urls.py  wsgi.py
